# SFCGAL

./: CMakeLists.txt
cmake/Modules/: FindCGAL.cmake  Libtoolize.cmake
example/SFCGAL-building/: CMakeLists.txt
example/SFCGAL-export-osg/: CMakeLists.txt
example/SFCGAL-offset/: CMakeLists.txt
patches/CGAL-4.2/CGAL/: intersection_of_Polyhedra_3_refinement_visitor.h
patches/CGAL-4.2/CGAL/Intersections_2/: Triangle_2_Triangle_2_intersection_impl.h
src/: CMakeLists.txt  LineString.cpp  Polygon.cpp
src/algorithm/: area.cpp  connection.h  extrude.cpp  isValid.cpp  isValid.h
src/detail/: ComplexComparator.h
src/detail/generator/: disc.cpp
src/detail/tools/: Registry.h
test/: CMakeLists.txt
test/bench/: CMakeLists.txt
test/garden/: CMakeLists.txt
test/regress/convex_hull/: CMakeLists.txt
test/regress/polygon_triangulator/: CMakeLists.txt
test/regress/standalone/: CMakeLists.txt
test/unit/: CMakeLists.txt
